defining common flags in the top makefile

--- a/cpp/Makefile
+++ b/cpp/Makefile
@@ -1,13 +1,19 @@
 
-all : graphlib tsp_
+.PHONY : tsp
+
+export CPP = g++
+export LD = g++
+
+export CFLAGS = -std=c++11 -fPIC -pedantic -Wall -Wextra -march=native
+
+
+all : graphlib tsp
 
 graphlib : 
 	cd npgraph && $(MAKE)
 
-tsp_ :
+tsp :
 	cd tsp && $(MAKE)
-
-
 
 
 
