--- a/cpp/tsp/Makefile
+++ b/cpp/tsp/Makefile
@@ -1,6 +1,4 @@
 
-CPP = g++
-LD = g++
 
 TARGETDIR =  ../../bin/
 TRAGET_HASH = $(TARGETDIR)/tsp_hash
@@ -10,8 +8,6 @@ INCLUDES = -I../npgraph
 LPATH = -L../../bin
 LIBRARIES = -lNPGraph
 
-CFLAGS = -std=c++11 -fPIC -pedantic -Wall -Wextra -march=native
-LFLAGS = -shared
 
 headers = $(wildcard *.h)
 sources = $(wildcard *.cpp)
@@ -21,15 +17,15 @@ objects = $(sources:.cpp=.o)
 all : tsp_hash tsp_tree tsp_opt
 
 tsp_hash: $(ODIR)/held_karp_hash.o $(headers) | $(TARGETDIR)
-	$(LD) $(LFLAGS) $(LPATH) $< $(LIBRARIES) -o $(TARGETDIR)/$@
+	$(LD) $(LPATH) $< $(LIBRARIES) -o $(TARGETDIR)/$@
 
 
 tsp_tree: $(ODIR)/held_karp_tree.o $(headers) | $(TARGETDIR)
-	$(LD) $(LFLAGS) $(LPATH) $< $(LIBRARIES) -o $(TARGETDIR)/$@
+	$(LD) $(LPATH) $< $(LIBRARIES) -o $(TARGETDIR)/$@
 
 
 tsp_opt: $(ODIR)/tsp_opt.o $(headers) | $(TARGETDIR)
-	$(LD) $(LFLAGS) $(LPATH) $<  $(LIBRARIES) -o $(TARGETDIR)/$@
+	$(LD) $(LPATH) $<  $(LIBRARIES) -o $(TARGETDIR)/$@
     
 
 #objects should be build in ODIR
